// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawer nested collections 1`] = `
Array [
  Route {
    "name": "pulse_posts",
    "path": "/posts/pulse",
    "precedence": 0,
  },
  Route {
    "name": "posts",
    "path": "/posts",
    "precedence": 1,
  },
  Route {
    "name": "new_post",
    "path": "/posts/new",
    "precedence": 2,
  },
  Route {
    "name": "post_edit",
    "path": "/posts/:id/edit",
    "precedence": 3,
  },
  Route {
    "name": "post",
    "path": "/posts/:id",
    "precedence": 4,
  },
]
`;

exports[`drawer nested remember 1`] = `
Array [
  Route {
    "name": "post_draft",
    "path": "/posts/:id/draft",
    "precedence": 0,
  },
  Route {
    "name": "posts",
    "path": "/posts",
    "precedence": 1,
  },
  Route {
    "name": "new_post",
    "path": "/posts/new",
    "precedence": 2,
  },
  Route {
    "name": "post_edit",
    "path": "/posts/:id/edit",
    "precedence": 3,
  },
  Route {
    "name": "post",
    "path": "/posts/:id",
    "precedence": 4,
  },
]
`;

exports[`drawer nested resources 1`] = `
Array [
  Route {
    "name": "comments",
    "path": "/posts/:postId/comments",
    "precedence": 0,
  },
  Route {
    "name": "new_comment",
    "path": "/posts/:postId/comments/new",
    "precedence": 1,
  },
  Route {
    "name": "comment_edit",
    "path": "/posts/:postId/comments/:id/edit",
    "precedence": 2,
  },
  Route {
    "name": "comment",
    "path": "/posts/:postId/comments/:id",
    "precedence": 3,
  },
  Route {
    "name": "posts",
    "path": "/posts",
    "precedence": 4,
  },
  Route {
    "name": "new_post",
    "path": "/posts/new",
    "precedence": 5,
  },
  Route {
    "name": "post_edit",
    "path": "/posts/:id/edit",
    "precedence": 6,
  },
  Route {
    "name": "post",
    "path": "/posts/:id",
    "precedence": 7,
  },
]
`;

exports[`drawer resource 1`] = `
Array [
  Route {
    "name": "new_profile",
    "path": "/profile/new",
    "precedence": 0,
  },
  Route {
    "name": "profile_edit",
    "path": "/profile/edit",
    "precedence": 1,
  },
  Route {
    "name": "profile",
    "path": "/profile",
    "precedence": 2,
  },
]
`;

exports[`drawer resources 1`] = `
Array [
  Route {
    "name": "posts",
    "path": "/posts",
    "precedence": 0,
  },
  Route {
    "name": "new_post",
    "path": "/posts/new",
    "precedence": 1,
  },
  Route {
    "name": "post_edit",
    "path": "/posts/:id/edit",
    "precedence": 2,
  },
  Route {
    "name": "post",
    "path": "/posts/:id",
    "precedence": 3,
  },
]
`;
